--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
 	implementation 'org.flywaydb:flyway-core:9.16.0'
+	implementation 'org.projectlombok:lombok:1.18.28'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.0'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
 	runtimeOnly 'org.postgresql:postgresql:42.5.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
 	testImplementation 'org.springframework.security:spring-security-test:6.0.2'
