--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 #spring.jpa.properties.hibernate.default_schema=public
 
 spring.flyway.baseline-on-migrate=true
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
