--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.flyway.baseline-on-migrate=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+security.enable-csrf=false
+
