--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,11 @@ spring.flyway.baseline-on-migrate=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-security.enable-csrf=false
 
+#springdoc.swagger-ui.csrf.enabled=true
+springdoc.swagger-ui.csrf.use-local-storage=true
+springdoc.swagger-ui.csrf.use-session-storage=true
+springdoc.swagger-ui.csrf.header-name=X-XSRF-TOKEN
+springdoc.swagger-ui.csrf.cookie-name=XSRF-TOKEN
+
+logging.level.org.springframework.security=debug
