--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.flyway.baseline-on-migrate=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 
-#springdoc.swagger-ui.csrf.enabled=true
+springdoc.swagger-ui.csrf.enabled=true
 springdoc.swagger-ui.csrf.use-local-storage=true
 springdoc.swagger-ui.csrf.use-session-storage=true
 springdoc.swagger-ui.csrf.header-name=X-XSRF-TOKEN
