--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,7 @@ tasks.named('bootBuildImage') {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.jar {
+	manifest.attributes["Main-Class"] = "com.example.testsBack"
+}
