--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,31 @@
-version: '3.9'
+version: "3.8"
 
 services:
-  testsdb:
-    container_name: tests-db
-    image: testsdb
-    ports:
-      - 5432:5432
+  psql-db:
+    image: postgres:14.10
+    container_name: psql-db
+    restart: always
+    volumes:
+      - ./database.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: testsDB
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    ports:
+      - '5432:5432'
+
   backend:
+    image: morozpr/backend:latest
+    container_name: backend-app
     build:
       context: .
       dockerfile: Dockerfile
-    image: testsback
+    ports:
+      - '8081:8080'
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://psql-db:5432/postgres
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    depends_on:
+      - psql-db
